[package]
name = "adaptive_algorithms"
version = "0.1.0"
authors = ["Maiko Mueller <maiko.mueller@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = {git = "https://github.com/ma1ko/rayon"}
mergesort = {git = "https://github.com/ma1ko/mergesort"}
rand = "*"
