[package]
name = "adaptive_algorithms"
version = "0.1.0"
authors = ["Maiko Mueller <maiko.mueller@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
rayon = {git = "https://github.com/ma1ko/rayon"}
#rayon = {path= "../rayon"}
rand = "*"
criterion = {git = "https://github.com/ma1ko/criterion.rs"}
#criterion = {path = "../criterion.rs"}
num_cpus = "*"
#rayon_logs = { path = "../rayon-logs", optional = true}
rayon_logs = { git = "https://github.com/ma1ko/rayon-logs", optional = true}
lazy_static = "*"
crossbeam-utils = "*"


[features]
default = ["multisplit"]
logs = ["rayon_logs"]
statistics = []
multisplit = []

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "points"
harness = false

[[bench]]
name = "scheduling"
harness = false
